# wavs-tools

./: .env-e  .env.example  .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  Cargo.toml  Makefile  README.md  Taskfile-cli.yml  Taskfile-middleware.yml  Taskfile.yml  delete-logs.sh  docker-compose.yml  foundry.toml  package-lock.json  package.json  remappings.txt  rustfmt.toml  service.json  wavs.toml  wkg.toml
.github/: CODEOWNERS
.github/scripts/: CODEOWNERS  collect-failures.js  comment-test-results-manual.js  comment-test-results.js  utils.js
.github/workflows/: comment-trigger.yml  contracts.yml  lint.yml  publish.yml  rust.yml  tests.yml  tests_trigger.yml  wavs-image-version-verifier.yml
abi/eigenlayer-middleware/AllocationManager.sol/: AllocationManager.json
abi/eigenlayer-middleware/ECDSAStakeRegistry.sol/: ECDSAStakeRegistry.json
abi/poa-middleware/POAStakeRegistry.sol/: POAStakeRegistry.json
abi/wavs-middleware/IWavsServiceManager.sol/: IWavsServiceManager.json
avs_sync/: Taskfile.yml  foundry.toml
avs_sync/components/avs-sync/: Cargo.toml
avs_sync/components/avs-sync/src/: avs_reader.rs  bindings.rs  evm.rs  lib.rs
avs_sync/script/: DeployAvsContracts.s.sol  DeployAvsWriter.s.sol  DeployWriter.s.sol  build-service.sh  deploy-submit.sh
avs_sync/src/contracts/: AvsReader.sol  AvsWriter.sol
avs_sync/src/interfaces/: IBLSApkRegistry.sol  IECDSAStakeRegistry.sol  IOperatorStateRetriever.sol  IRegistryCoordinator.sol  IStakeRegistry.sol
avs_sync/test/: AvsReader.t.sol
backend/: Taskfile.yml  docker-compose-anvil.yml  docker-compose-telemetry.yml  docker-compose-wavs-aggregator.yml  docker-compose-wavs-instance.yml  docker-compose-wavs.yml  docker-compose.yml  prometheus.yml
backend/testnet/: docker-compose-multi.yml  start.sh
backend/wavs-home/: wavs.toml
cli/: Taskfile.yml
components/cron-operators/: Cargo.toml
contracts/: WavsSubmit.sol  WavsTrigger.sol
contracts/compiled/: eth_price_oracle.wasm
contracts/interfaces/: IWavsTrigger.sol
contracts/script/: ShowResult.s.sol  Trigger.s.sol
contracts/test/: WavsTrigger.t.sol
contracts/wavs-drand/: foundry.toml
contracts/wavs-drand/script/: Deploy.s.sol
contracts/wavs-drand/src/: RandomnessTrigger.sol  Types.sol
docs/: index.mdx
mochawesome-report/: test-report.html  test-report.json
projects/aggregator-router/component/: Cargo.toml
projects/aggregator-simple/component/: Cargo.toml  cmd.sh
projects/aggregator-simple/component/src/: bindings.rs  gas_oracle.rs  lib.rs  packet_serde.rs  utils.rs
projects/avs-sync/: Taskfile.test.yml  Taskfile.yml
projects/avs-sync/component/: Cargo.toml
projects/avs-sync/contracts/: foundry.toml
projects/avs-sync/taskfile/: bootstrap.yml  test.yml  utils.yml
projects/multi-chain-operator-sync/: README.md  Taskfile.yml
projects/multi-chain-operator-sync/component/: Cargo.toml
projects/multi-chain-operator-sync/component/src/: bindings.rs  lib.rs  utils.rs
projects/multi-chain-operator-sync/contracts/: foundry.toml
projects/multi-chain-operator-sync/taskfile/: bootstrap.yml  test.yml  utils.yml
projects/multi-chain-quorum-sync/: Taskfile.yml
projects/multi-chain-quorum-sync/component/: Cargo.toml
projects/multi-chain-quorum-sync/component/src/: bindings.rs  lib.rs
projects/multi-chain-quorum-sync/contracts/: foundry.toml
projects/multi-chain-quorum-sync/taskfile/: bootstrap.yml  test.yml  utils.yml
projects/multi-chain-service-manager-sync/: Taskfile.yml
projects/multi-chain-service-manager-sync/component/: Cargo.toml
projects/multi-chain-service-manager-sync/component/src/: bindings.rs  lib.rs  utils.rs
projects/multi-chain-service-manager-sync/contracts/: foundry.toml
projects/multi-chain-service-manager-sync/taskfile/: bootstrap.yml  test.yml  utils.yml
projects/operator-updater/: Taskfile.yml
projects/operator-updater/component/: Cargo.toml
projects/operator-updater/taskfile/: bootstrap.yml  test.yml  utils.yml
projects/wavs-drand/: README.md  Taskfile.yml
projects/wavs-drand/component/: Cargo.toml
projects/wavs-drand/component/src/: bindings.rs  lib.rs  random_derivation.rs  trigger.rs  utils.rs
projects/wavs-drand/contracts/: foundry.toml
projects/wavs-drand/taskfile/: bootstrap.yml  test.yml  utils.yml
projects/wavs-vrf/: README.md  Taskfile.yml
projects/wavs-vrf/component/: Cargo.toml
projects/wavs-vrf/taskfile/: bootstrap.yml  test.yml
script/: avs-signing-key.sh  build-service.sh  build_components.sh  create-aggregator.sh  create-operator.sh  deploy-component.sh  deploy-middleware.sh  get-service-manager.sh  ipfs-upload.sh  start_all.sh
taskfile/: backend.yml  cli.yml  component.yml  config.yml  docker.yml  middleware.yml  publish.yml  utils.yml  visualizer.yml
taskfile/common/: bootstrap.yml  mirror.yml  utils.yml
taskfile/middleware/: ecdsa.yml  mock.yml  poa.yml  utils.yml
taskfile/middleware/eigen/: ecdsa.yml  mirror.yml  mock.yml
telemetry/: docker-compose.yml
tests/: .mocharc.json  README.md  package-lock.json  package.json  tsconfig.json
tests/src/: avs-sync.test.ts  basic.test.ts  multi-chain-operator-sync-ecdsa.test.ts  multi-chain-operator-sync-poa.test.ts  multi-chain-operator-sync.test.ts  multi-chain-quorum-sync.test.ts  multi-chain-service-manager-sync.test.ts  operator-updater.test.ts  sanity.test.ts  wavs-drand.test.ts  wavs-vrf.test.ts
tests/src/helpers/: backend.ts  constants.ts  utils.ts
tools/avs-sync/: Taskfile.yml
tools/avs-sync/contracts/: foundry.toml
tools/avs_sync/: .env.example  Taskfile.yml  foundry.toml
tools/avs_sync/script/: DeployAvsContracts.s.sol  DeployAvsWriter.s.sol  build-service.sh  deploy-submit.sh
tools/avs_sync/test/: AvsWriter.t.sol
tools/service-visualizer/: README.md  index.html  package.json
tools/service-visualizer/src/: App.tsx  CustomNodes.tsx  index.css  layoutManager.ts  serviceParser.ts  types.ts
wit-definitions/aggregator/: wkg.toml
wit-definitions/aggregator/wit/: aggregator.wit
wit-definitions/operator/wit/: operator.wit
wit-definitions/types/wit/: events.wit  lib.wit  service.wit
(+46 files in other folders)
