[workspace]
members = [
    "projects/operator-updater/component",
    "projects/multi-chain-operator-sync/component",
    "projects/multi-chain-quorum-sync/component",
    "projects/wavs-drand/component",
    "projects/aggregator-simple/component",
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "2.0.0"
license = "MIT"
authors = ["Lay3r Labs Team"]
repository = "https://github.com/Lay3rLabs/wavs-tools"
rust-version = "1.80.0"

[workspace.dependencies]
# WASI
wit-bindgen-rt = { version = "0.44.0", features = ["bitflags"] }
wit-bindgen = "0.48.0"
wstd = "0.5.6"
wavs-wasi-utils = "=2.2.0"
wavs-types = { git = "https://github.com/Lay3rLabs/WAVS", branch = "cargo-wasip2", features = [
    "full",
] }
wasip2 = "1.0.1"

# Other
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
anyhow = "1.0.98"
bincode = { version = "2.0.1", features = ["serde"] }

## Alloy
alloy-sol-macro = { version = "1.4.1", features = ["json"] }
alloy-sol-types = "1.4.1"
alloy-primitives = { version = "1.4.1", features = ["serde"] }
alloy-network = "1.1.1"
alloy-provider = "1.1.1"
alloy-rpc-types = "1.1.1"
alloy-contract = "1.1.1"
alloy-transport-http = "1.1.1"
