[package]
name = "cron-operators"
version.workspace = true
edition.workspace = true
authors.workspace = true
rust-version.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib"]

[features]
default = []

[dependencies]

[dev-dependencies]

[profile.release]
codegen-units = 1
opt-level = "s"
debug = false
strip = true
lto = true

[package.metadata.component]
package = "component:cron-operators"
target = "wavs:worker/layer-trigger-world@0.4.0-beta.5"
