[package]
name = "avs-sync"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "component:avs-sync"
target = "wavs:worker/layer-trigger-world@0.4.0-beta.4"

[dependencies]
wavs-wasi-chain = { workspace = true }
wstd = { workspace = true }

alloy-sol-macro = { workspace = true }
alloy-sol-types = { workspace = true }
wit-bindgen-rt = { workspace = true }

alloy-primitives = "0.8.13"
primitive-types = "0.13.1"

alloy-network = "0.11.1"
alloy-provider = { version = "0.11.1", default-features = false, features = ["rpc-api"] }
alloy-rpc-types = "0.11.1"
alloy-transport-http = { version = "0.11.1", default-features = false }

hex = "0.4.3"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
anyhow = { workspace = true }
url = "2.3.1"

wit-bindgen = { workspace = true }
