[package]
name = "avs-sync"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "component:avs-sync"
target = "wavs:worker/layer-trigger-world@0.4.0-beta.4"

[dependencies]
wavs-wasi-utils = { workspace = true }
wstd = { workspace = true }

alloy-network = { workspace = true }
alloy-provider = { workspace = true }
alloy-rpc-types = { workspace = true }
alloy-transport-http = { workspace = true }
alloy-primitives = { workspace = true }
alloy-sol-macro = { workspace = true }
alloy-sol-types = { workspace = true }
alloy-contract = { workspace = true }

wit-bindgen-rt = { workspace = true }

primitive-types = "0.13.1"

hex = "0.4.3"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
anyhow = { workspace = true }
url = "2.3.1"

wit-bindgen = { workspace = true }
