[package]
name = "aggregator-simple"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "component:aggregator-simple"
target = "wavs:aggregator@0.6.0-alpha.12"

[dependencies]
alloy-primitives = { workspace = true }
wit-bindgen-rt = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
wavs-wasi-utils = { workspace = true }
alloy-provider = { workspace = true }
alloy-network = { workspace = true }
wstd = { workspace = true }
