[package]
name = "multi-chain-operator-sync"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "component:multi-chain-operator-sync"
target = "wavs:worker/layer-trigger-world@0.4.0-beta.4"

[dependencies]
wavs-wasi-utils = { workspace = true }
wstd = { workspace = true }

alloy-network = { workspace = true }
alloy-provider = { workspace = true }
alloy-rpc-types = { workspace = true }
alloy-transport-http = { workspace = true }
alloy-primitives = { workspace = true }
alloy-sol-macro = { workspace = true }
alloy-sol-types = { workspace = true }
alloy-contract = { workspace = true }

wit-bindgen-rt = { workspace = true }

serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
anyhow = { workspace = true }

wit-bindgen = { workspace = true }
