[package]
name = "multi-chain-quorum-sync"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
wavs-wasi-utils = { workspace = true }
wstd = { workspace = true }

alloy-network = { workspace = true }
alloy-provider = { workspace = true }
alloy-transport-http = { workspace = true }
alloy-primitives = { workspace = true }
alloy-sol-macro = { workspace = true }
alloy-sol-types = { workspace = true }
alloy-contract = { workspace = true }

wit-bindgen-rt = { workspace = true }
wit-bindgen = { workspace = true }
wasip2 = { workspace = true }

serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
anyhow = { workspace = true }
bincode = { workspace = true }
