[package]
name = "wavs-drand"
description = "A WASI component for event-based deterministic randomness with Drand"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true
publish = true

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
wstd = { workspace = true }
wasi = { workspace = true }
wit-bindgen-rt = { workspace = true }
alloy-primitives = { workspace = true }
alloy-sol-types = { workspace = true }
alloy-provider = { workspace = true }
alloy-transport-http = { workspace = true }
alloy-rpc-types = { workspace = true }
wavs-wasi-utils = { workspace = true }

[package.metadata.component]
package = "component:wavs-drand"
target = "wavs:operator@0.6.0-alpha.12"
